# C-Programs

./: COBS.c  CircularQ.c  DecimalToBinary.c  Dynamic.c  FarToCel.c  File_count_words.c  File_eliminate_occurance_of_string.c  File_grep.c  File_handling.c  File_handling_CPY_DMA.c  File_handling_Copy.c  File_mv_user.c  File_wc_dup.c  Find_the_Trend.c  Function_Pointer.c  Pointer_fun.c  Privacy Policy for LinkedIn Job Highlighter.docx  QueuewithArray.c  README.md  Rev_String.c  StackwithLinkedlist.c  Stackwitharray.c  Zero-Mover_to_the_Left.c  balancedparathesis.c  fac_given_number.c  fib.c  ownmalloc_char.c  reverse_using_recursion.c  stribrk.c  swap.c
Bit-Wise/: CMakeLists.txt  check_even_odd.c  check_opposite_signs.c  find_set_bits.c  functions.h  libs.h  main_file.c  printBinary.c  reverseBits.c  set_unset_kth_bit.c  structures.h  swap_integers.c
CPUvsGPU_Benchmarking_using_OpenACC/: README.md
LinkedIn/: About Memchr  About_Arrays_In_C.c  Queue.c  Stack.c  checking.c  circularBuffer.c  deadlock_demo.c  findSubarrayXOR.c  hashTable.c  livelock_demo.c  longestConsecutive.c  longestSubString.c  mergeArraysOptimized1.c  mergeArrays_base.c  mergeSortedArrays.c  mergeStrings.c  mergeStrings2.c  merge_sorted_arrays.c
Pattern_Problems/: pattern1.c  pattern10.c  pattern2.c  pattern3.c  pattern4.c  pattern5.c  pattern6.c  pattern7.c  pattern8.c  pattern9.c
Trace_and_Retrace/: Generate_Coordinates.c  Makefile  Move_to_coordinates_and_back.c  README.md  Stack.h  Stack_implementation.c  a.out  output  tempCodeRunnerFile.c  trace_retrace.h
analyze_sbrk/: README.md  (+1 more)
(+32 files in other folders)
